style: apply spotless formatting